--- a/LFS_DesStat.Rmd
+++ b/LFS_DesStat.Rmd
@@ -1,66 +1,84 @@
 ---
 title: "Insights into Canada's Evolving Labor Force"
 GitHub: "https://github.com/azadpervez/LFS.git"
-author: "Md Azad Pervez"
+author: "Azad"
 Course: "CIND 820 Big Data Analytics Project"
 output: word_document
 ---
 
-# Define the file path
+# Define the file path and Read CSV
 ```{r}
 full_dataset_path <- "C:/820WF/LFS_2017_2023/lfs_17_23.csv"
-# Read the CSV file
 LFS_data <- read.csv(full_dataset_path)
 ```
 
 
+# Select a smaller subset of data and Combine Categories
+```{r}
+# Select only the relevant variables
+LFS_Selected <- LFS_data[LFS_data$SURVYEAR >= 2023, c("SURVMNTH","LFSSTAT", "PROV", "AGE_12", "SEX", "MARSTAT", "EDUC", "IMMIG")]
+
+```
+
+#Univariate Analysis
+```{r}
+library(ggplot2) 
+library(dplyr)
+library(scales)  
+
+categorical_variables <- c("SURVMNTH", "LFSSTAT", "PROV", "AGE_12", "SEX", "MARSTAT", "EDUC", "IMMIG")
+
+for (variable in categorical_variables) {
+  # Summary table to show the frequency of each category
+  summary_table <- table(LFS_Selected[[variable]])
+
+  # Bar plot to visualize the distribution of categories
+  bar_plot <- ggplot(LFS_Selected, aes(x = factor(.data[[variable]], levels = unique(.data[[variable]])))) +
+    geom_bar(fill = "#66c2a5", width = 0.7) +  # Change bar fill color and adjust width
+    geom_text(stat = "count", aes(label = scales::comma(..count.. / 1000, accuracy = 1)), vjust = -0.5) +
+    labs(title = paste("Distribution of", variable),
+         caption = "LFS Data: Jan - Sep 2023") +
+    xlab(NULL) + 
+    ylab("Frequency (in thousands)") + 
+    scale_y_continuous(labels = scales::comma_format(scale = 1e-3)) +  
+    theme(axis.text.x = element_text(angle = 45, hjust = 1), 
+          panel.grid.major = element_blank(),  
+          panel.grid.minor = element_blank())  
+
+  print(bar_plot)
+}
+
+
+```
+
+```{r}
+str(LFS_Selected)
+```
 #Summary of Data
 ```{r}
-summary(LFS_data)
+summary(LFS_Selected)
 ```
+```{r}
+str(LFS_Selected)
+```
+
 #Detailed statistics 
 ```{r}
-#install.packages("psych")
-
 library(psych)
 
 # Compute detailed statistics for the entire dataset
-detailed_statistics <- describe(LFS_data)
+detailed_statistics <- describe(LFS_Selected)
 
 # View the detailed statistics
 print(detailed_statistics)
 ```
-
-#Section 2: Bar plot of observations per year
-```{r}
-observation_count <- table(LFS_data$SURVYEAR)
-observation_df <- as.data.frame(observation_count)
-observation_df$year <- row.names(observation_df)
-colnames(observation_df) <- c("Year", "Observations")
-
-# Convert the "Observations" column to thousands
-observation_df$Observations <- observation_df$Observations / 1000
-
-# Set a larger margin for the right axis label
-par(mar = c(5, 6, 4, 6))
-
-# Create the barplot
-barplot(observation_df$Observations, names.arg = observation_df$Year, col = "steelblue",
-        xlab = "Year", ylab = "Number of Observations (in thousands)",
-        main = "Number of Observations by Year",
-        las = 1, horiz = FALSE)
-
-
-```
 #Correlation Table
 ```{r}
-correlation_matrix <- cor(LFS_data)
-
-# Create a correlation table
-correlation_table <- as.data.frame(correlation_matrix)
-
-# Print the correlation table
+correlation_matrix <- cor(LFS_Selected)
+correlation_matrix_rounded <- round(correlation_matrix, 2)
+correlation_table <- as.data.frame(correlation_matrix_rounded)
 print(correlation_table)
+
 
 ```
 
@@ -71,7 +89,7 @@ library(ggplot2)
 library(reshape2)
 
 # Create a correlation matrix
-correlation_matrix <- cor(LFS_data)
+correlation_matrix <- cor(LFS_Selected)
 
 # Clean the correlation matrix by replacing NAs with zeros
 correlation_matrix[is.na(correlation_matrix)] <- 0
@@ -88,15 +106,19 @@ correlation_long <- melt(correlation_reordered)
 
 # Create a ggplot2-style correlation matrix plot
 ggplot(data = correlation_long, aes(x = Var1, y = Var2, fill = value)) +
-  geom_tile() +
-  scale_fill_gradient2(low = "black", high = "red", mid = "white", midpoint = 0) +
+  geom_tile(color = "white", size = 0.5) +
+  geom_text(aes(label = sprintf("%.2f", value)), vjust = 1, color = "black", size = 3) +
+  scale_fill_gradient2(low = "skyblue", high = "darkred", mid = "white", midpoint = 0, name = "Correlation") +
   theme_minimal() +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
+  theme(
+    axis.text.x = element_text(angle = 45, hjust = 1),
+    panel.grid = element_blank(), 
+    axis.title = element_blank()  
+  ) +
   coord_fixed()
 
 
-# Create a heat map-style correlation matrix plot
-heatmap(correlation_matrix, col = colorRampPalette(c("blue", "white", "red"))(50), 
-        main = "Correlation Heatmap", xlab = "Variables", ylab = "Variables")
 ```
+
+
 
